org-demo.html: More tweaking

--- a/org-demo.html
+++ b/org-demo.html
@@ -19,7 +19,8 @@
       List todos across all your files.
       Filter content, and update it in place.
     </asside>
-    <pre>The <i>/beauty/</i> of org <b>*must*</b> be shared.</pre>
+    <pre>
+The <i>/beauty/</i> of org <b>*must*</b> be shared.</pre>
     <details class="replace">
       <summary>
 	<pre><span class="org-link">[[https://upload.wikimedia.org/wikipedia/commons/b/bd/Share_Icon.svg]]</span></pre>
@@ -30,13 +31,16 @@
       <summary>
 	<pre><span class="org-level-2">** <span class="org-done">DONE Make screenshots</span></span></pre>
       </summary>
-      <pre>   <span class="org-special-keyword">CLOSED:</span> <span class="org-date">[2020-09-03 Thu 18:24]</span></pre>
+      <pre>   <span class="org-special-keyword">CLOSED:</span> <span class="org-date">[2020-09-03 Thu 18:24]</span>
+</pre>
     </details>
     <details open>
       <summary>
 	<pre><span class="org-level-2">** <span class="org-done">DONE Restyle Site CSS</span></span></pre>
       </summary>
-      <pre>Go through <span class="org-link"><a href="/resources/style/org.css">[[file:style.scss][stylesheet]]</a></span></pre>
+      <pre>
+Go through <span class="org-link"><a href="/resources/style/org.css">[[file:style.scss][stylesheet]]</a></span>
+</pre>
     </details>
     <input type="checkbox" class="chk" id="chk1" checked />
     <input type="checkbox" class="chk" id="chk2" checked />
@@ -50,6 +54,7 @@
 	<pre><span class="org-level-2">** <span class="org-todo">TODO</span> Check CSS on main pages <span class="count-res"></span></span></pre>
       </summary>
       <pre class="countme">
+
 <label for="chk1"><span class="org-list-dt">-</span> Index page</label>
 <label for="chk2"><span class="org-list-dt">-</span> Quickstart</label>
 <label for="chk3"><span class="org-list-dt">-</span> Features</label>
@@ -57,7 +62,7 @@
 <label for="chk5"><span class="org-list-dt">-</span> Install</label>
 <label for="chk6"><span class="org-list-dt">-</span> Manual</label>
 <label for="chk7"><span class="org-list-dt">-</span> Contribute</label>
-      </pre>
+</pre>
     </details>
   </details>
   <details open class="label-left">
@@ -77,7 +82,8 @@ here for you as well: dive into the manual and join the community!
       <summary>
 	<pre><span class="org-level-2">** Feedback</span></pre>
       </summary>
-      <pre><span class="org-special-keyword">#+include: "other/feedback.org*manual" :only-contents t</span></pre>
+      <pre>
+<span class="org-special-keyword">#+include: "other/feedback.org*manual" :only-contents t</span></pre>
     </details>
   </details>
   <details open>
