org-demo.html: Never say "never"

--- a/org-demo.html
+++ b/org-demo.html
@@ -3,8 +3,7 @@
   <pre class="label-left">
 #+title:  <span class="org-document-title">Example Org File</span>
 #+author: <span class="org-document-info">TEC</span>
-#+date:   <span class="org-document-info">2020-10-27</span>
-  </pre>
+#+date:   <span class="org-document-info">2020-10-27</span></pre>
   <details open>
     <summary>
       <asside class="right" style="position: relative; z-index: -1">
