--- a/org-demo.html
+++ b/org-demo.html
@@ -75,7 +75,7 @@ Go through <span class="org-link"><a href="/resources/style/org.css">[[file:styl
     </summary>
     <pre>
 
-Org makes easy things easy and complex things possible.
+Org makes easy things trivial and complex things practial.
 
 You don't need to learn Org before using Org: read the quickstart
 page and you should be good to go.  If you need more, Org will be
