--- a/org-demo.html
+++ b/org-demo.html
@@ -98,7 +98,7 @@ here for you as well: dive into the manual and join the community!
     </summary>
     <asside class="right">
       <h4>Babel</h4>
-      Perform literate programing in org,
+      Perform literate programming in org,
       with notebook-like live code execution in the buffer.
     </asside>
     <asside class="label-left">Code</asside>
