--- a/org-demo.html
+++ b/org-demo.html
@@ -8,7 +8,7 @@
     <summary>
       <asside class="right" style="position: relative; z-index: -1">
 	<h4>Outlining</h4>
-	Headlines and folding make structured editing a breeze.
+	Headings and folding make structured editing a breeze.
 	Plain text makes it easy to sync and version control Org files.
       </asside>
       <pre><span class="org-level-1">* Revamp orgmode.org website</span></pre>
