--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -28,7 +28,7 @@ fathom('trackPageview');
     <a href="/features.html">Features</a>
     <a href="/Changes.html">Releases</a>
     <a href="https://updates.orgmode.org">Updates</a>
-    <a href="/install.html">Install</a>
+    <a href="https://orgmode.org/org.html#Installation">Install</a>
     <a href="/manual">Manual</a>
     <a href="/community.html">Community</a>
     <a href="/contribute.html">Contribute</a>
