Replace the community button by a link to Worg
Promote some contents of the community page to the index page.

--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -30,7 +30,7 @@ fathom('trackPageview');
     <a href="https://updates.orgmode.org">Updates</a>
     <a href="https://orgmode.org/org.html#Installation">Install</a>
     <a href="/manual">Manual</a>
-    <a href="/community.html">Community</a>
+    <a href="/worg">Worg</a>
     <a href="/contribute.html">Contribute</a>
     <!-- <a title="View Source" class="view-source"
          href="javascript:show_org_source()">&lt;/&gt;</a> -->
