Remove contribute.org and point to worg/org-contribute.html

--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -17,5 +17,5 @@
     <a href="https://orgmode.org/org.html#Installation">Install</a>
     <a href="/manual">Manual</a>
     <a href="/worg">Worg</a>
-    <a href="/contribute.html">Contribute</a>
+    <a href="/worg/org-contribute.html">Contribute</a>
 </nav>
