manuals.org: New page

--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -15,7 +15,7 @@
     <a href="/Changes.html">Releases</a>
     <a href="https://updates.orgmode.org">Updates</a>
     <a href="https://orgmode.org/org.html#Installation">Install</a>
-    <a href="/manual">Manual</a>
+    <a href="/manuals.html">Manuals</a>
     <a href="/worg">Worg</a>
     <a href="/worg/org-contribute.html">Contribute</a>
 </nav>
