resources/preamble.html: Add contextual information on menu links

--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -12,10 +12,10 @@
     <a href="index.html">
       <p class="logo"><img src="/resources/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/> Org Mode</p></a>
     <a href="/features.html">Features</a>
-    <a href="/Changes.html">Releases</a>
-    <a href="https://updates.orgmode.org">Updates</a>
-    <a href="https://orgmode.org/org.html#Installation">Install</a>
-    <a href="/manuals.html">Manuals</a>
-    <a href="/worg">Worg</a>
-    <a href="/worg/org-contribute.html">Contribute</a>
+    <a title="Get detailed updates on the latest releases" href="/Changes.html">Releases</a>
+    <a title="Check upcoming changes, help requests, confirmed bugs and submitted patches" href="https://updates.orgmode.org">Updates</a>
+    <a title="Start here to install Org" href="https://orgmode.org/org.html#Installation">Install</a>
+    <a title="Check all manuals" href="/manuals.html">Manuals</a>
+    <a title="Worg is the community-driven documentation for Org" href="/worg">Worg</a>
+    <a title="Start here if you want to contribute to Org" href="/worg/org-contribute.html">Contribute</a>
 </nav>
