--- a/resources/postamble.html
+++ b/resources/postamble.html
@@ -1,1 +1,17 @@
-<p class="author">Created by <a href="https://github.com/tecosaur/" style="font-weight: bold; font-size: 0.9em; letter-spacing: 0.05em" title="Your friendly neighbourhood Org-thusiast">TEC</a> with <a href="https://orgmode.org/worg/org-site-colophon.html"><img class="inline" src="/resources/img/org-mode-unicorn-borderless-icon.svg" alt="Org mode unicorn logo" style="height:1.5em; margin-bottom:-0.3em; opacity:0.9;" title="Conquer the world with Org 😉"/></a></p><p class="license-text" style="color: #aaa">licensed under the <a rel="license" href="https://git.sr.ht/~bzg/orgweb/blob/master/LICENSE.org" style="font-size: 0.8em; letter-spacing: 0.1em; font-weight: bold; color: inherit" title="GNU Free Documentation License version 1.3">GNU FDL 1.3</a> - see the <a href="https://git.sr.ht/~bzg/orgweb">source code</a> for this website.</p>
+<p class="author">Created by
+    <a href="https://github.com/tecosaur/"
+       style="font-weight: bold; font-size: 0.9em; letter-spacing: 0.05em"
+       title="Your friendly neighbourhood Org-thusiast">TEC</a>
+    with
+    <a href="https://orgmode.org/worg/org-site-colophon.html">
+        <img class="inline" src="/resources/img/org-mode-unicorn-borderless-icon.svg" alt="Org mode unicorn logo"
+             style="height:1.5em; margin-bottom:-0.3em; opacity:0.9;"
+             title="Conquer the world with Org 😉"/>
+    </a>
+</p>
+<p class="license-text" style="color: #aaa">licensed under the
+    <a rel="license" href="https://git.sr.ht/~bzg/orgweb/blob/master/LICENSE.org"
+       style="font-size: 0.8em; letter-spacing: 0.1em; font-weight: bold; color: inherit"
+       title="GNU Free Documentation License version 1.3">GNU FDL 1.3</a>
+    &mdash; see the <a href="https://git.sr.ht/~bzg/orgweb">source code</a> for this website.
+</p>
